# rust-examples

./: prompts.md
blog-api/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
blog-api/config/: default.json  production.json
blog-api/migrations/: 20231212000000_initial_schema.sql
blog-api/public/: index.html
blog-api/src/: main.rs
blog-api/src/api/: mod.rs  posts.rs  users.rs
blog-api/src/config/: mod.rs
blog-api/src/db/: mod.rs  post_repository.rs  user_repository.rs
blog-api/src/errors/: mod.rs
blog-api/src/models/: post.rs  user.rs
todo-cli/: Cargo.toml  README.md  tasks.json
todo-cli/src/: cli.rs  main.rs  storage.rs  task.rs
