[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"
description = "A simple RESTful blog API with CRUD functionality"
authors = ["Developer"]

[dependencies]
# Web framework
axum = { version = "0.7.3", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "chrono"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Serialization & Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"

# Error handling
thiserror = "1.0.51"
anyhow = "1.0.76"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Configuration
config = "0.13.4"
dotenv = "0.15.0"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Validation
validator = { version = "0.16.1", features = ["derive"] }
